--- a/src/Mzayad.Web/compilerconfig.json
+++ b/src/Mzayad.Web/compilerconfig.json
@@ -2,5 +2,9 @@
   {
     "outputFile": "Content/site.css",
     "inputFile": "Content/site.less"
+  },
+  {
+    "outputFile": "Content/site-kendo.css",
+    "inputFile": "Content/site-kendo.less"
   }
 ]
