--- a/src/Mzayad.Services/packages.config
+++ b/src/Mzayad.Services/packages.config
@@ -6,4 +6,5 @@
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net451" />
   <package id="OrangeJetpack.Base.Core" version="0.0.7" targetFramework="net451" />
   <package id="OrangeJetpack.Localization" version="1.5.6" targetFramework="net45" />
+  <package id="OrangeJetpack.Services.Client" version="0.0.30" targetFramework="net451" />
 </packages>
