--- a/src/Mzayad.Web/packages.config
+++ b/src/Mzayad.Web/packages.config
@@ -19,6 +19,7 @@
   <package id="jquery.TypeScript.DefinitelyTyped" version="2.2.6" targetFramework="net451" />
   <package id="jQuery.UI.Combined" version="1.11.3" targetFramework="net451" />
   <package id="jQuery.Validation" version="1.13.1" targetFramework="net451" />
+  <package id="knockout.TypeScript.DefinitelyTyped" version="0.8.2" targetFramework="net451" />
   <package id="knockoutjs" version="3.3.0" targetFramework="net451" />
   <package id="MarkdownSharp" version="1.13.0.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.Cors" version="5.2.3" targetFramework="net451" />
@@ -50,6 +51,7 @@
   <package id="Mindscape.Raygun4Net.Core" version="5.0.0" targetFramework="net451" />
   <package id="Mindscape.Raygun4Net.Mvc" version="5.0.0" targetFramework="net451" />
   <package id="Moment.js" version="2.10.2" targetFramework="net451" />
+  <package id="moment.TypeScript.DefinitelyTyped" version="1.1.1" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net451" />
   <package id="OrangeJetpack.Base.Core" version="0.0.7" targetFramework="net451" />
   <package id="OrangeJetpack.Base.Web" version="0.0.8" targetFramework="net451" />
@@ -59,6 +61,7 @@
   <package id="OrangeJetpack.Services.Client" version="0.0.33" targetFramework="net451" />
   <package id="Owin" version="1.0" targetFramework="net451" />
   <package id="RestSharp" version="105.0.0" targetFramework="net451" />
+  <package id="signalr.TypeScript.DefinitelyTyped" version="0.1.8" targetFramework="net451" />
   <package id="StackExchange.Redis" version="1.0.414" targetFramework="net451" />
   <package id="WebGrease" version="1.6.0" targetFramework="net451" />
 </packages>
