--- a/src/Mzayad.Web/packages.config
+++ b/src/Mzayad.Web/packages.config
@@ -41,11 +41,12 @@
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.2" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net451" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.2" targetFramework="net451" />
-  <package id="Microsoft.Owin" version="3.0.0" targetFramework="net451" />
-  <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.0" targetFramework="net451" />
-  <package id="Microsoft.Owin.Security" version="3.0.0" targetFramework="net451" />
-  <package id="Microsoft.Owin.Security.Cookies" version="3.0.0" targetFramework="net451" />
-  <package id="Microsoft.Owin.Security.OAuth" version="3.0.0" targetFramework="net451" />
+  <package id="Microsoft.Owin" version="3.0.1" targetFramework="net451" />
+  <package id="Microsoft.Owin.Cors" version="3.0.1" targetFramework="net451" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net451" />
+  <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net451" />
+  <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net451" />
+  <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net451" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
   <package id="Microsoft.Web.WebJobs.Publish" version="1.0.6" targetFramework="net451" />
   <package id="Mindscape.Raygun4Net.Core" version="5.0.0" targetFramework="net451" />
