--- a/src/Mzayad.Web/Mzayad.Web.csproj
+++ b/src/Mzayad.Web/Mzayad.Web.csproj
@@ -346,6 +346,7 @@
     <Compile Include="Areas\Admin\Models\WishList\EditViewModel.cs" />
     <Compile Include="Areas\Admin\Models\WishList\IndexViewModel.cs" />
     <Compile Include="Areas\Api\ApiAreaRegistration.cs" />
+    <Compile Include="Areas\Api\Controllers\ApplicationApiController.cs" />
     <Compile Include="Areas\Api\Controllers\AuctionsController.cs" />
     <Compile Include="Areas\Api\Controllers\UsersController.cs" />
     <Compile Include="Areas\Api\Models\Auctions\AuctionModel.cs" />
@@ -356,7 +357,6 @@
     <Compile Include="Areas\Reports\Models\Tokens\TokenLogViewModel.cs" />
     <Compile Include="Areas\Reports\Models\Subscriptions\SubscriptionLogViewModel.cs" />
     <Compile Include="Areas\Reports\ReportsAreaRegistration.cs" />
-    <Compile Include="Controllers\ApplicationApiController.cs" />
     <Compile Include="Controllers\AuctionsController.cs" />
     <Compile Include="Controllers\CategoriesController.cs" />
     <Compile Include="Controllers\KnetController.cs" />
