--- a/src/Mzayad.Web/Web.config
+++ b/src/Mzayad.Web/Web.config
@@ -69,6 +69,17 @@
       </security>
     </system.webServer>
   </location>
+  <location path="api">
+    <system.webServer>
+      <httpProtocol>
+        <customHeaders>
+          <add name="Access-Control-Allow-Origin" value="*" />
+          <add name="Access-Control-Allow-Headers" value="Content-Type" />
+          <add name="Access-Control-Allow-Methods" value="GET, POST, PUT, DELETE, OPTIONS" />
+        </customHeaders>
+      </httpProtocol>
+    </system.webServer>
+  </location>
   <!-- ReSharper restore WebConfig.WebConfigPathWarning -->
   <system.webServer>
     <modules>
@@ -86,13 +97,9 @@
     </staticContent>
     <httpProtocol>
       <customHeaders>
-        <remove name="X-Powered-By" />
-        <!--<add name="Access-Control-Allow-Origin" value="*" />-->
-        <add name="Access-Control-Allow-Headers" value="Content-Type" />
-        <add name="Access-Control-Allow-Methods" value="GET, POST, PUT, DELETE, OPTIONS" />
+        <clear />    
       </customHeaders>
     </httpProtocol>
-
 
     <validation validateIntegratedModeConfiguration="false" />
     <handlers>
