--- a/src/Mzayad.Models/Mzayad.Models.csproj
+++ b/src/Mzayad.Models/Mzayad.Models.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Enums\SubscriptionStatus.cs" />
     <Compile Include="Enums\UserProfileStatus.cs" />
     <Compile Include="Enum\TrophyKey.cs" />
+    <Compile Include="IslamicCalendar.cs" />
     <Compile Include="Level.cs" />
     <Compile Include="ModelBase.cs" />
     <Compile Include="Order.cs" />
