--- a/src/Mzayad.Web/Mzayad.Web.csproj
+++ b/src/Mzayad.Web/Mzayad.Web.csproj
@@ -640,6 +640,7 @@
     <Content Include="manifest.json" />
     <Content Include="Content\site-auctions.less" />
     <Content Include="Scripts\auctions.js.map" />
+    <Content Include="Content\site-user.less" />
     <None Include="Scripts\jquery-2.1.4.intellisense.js" />
     <Content Include="mstile-144x144.png" />
     <Content Include="mstile-150x150.png" />
@@ -802,7 +803,6 @@
     <Content Include="Views\Shared\ImageUploader.cshtml" />
     <Content Include="Views\User\ChangePassword.cshtml" />
     <Content Include="Views\User\_Layout.cshtml" />
-    <Content Include="Views\User\_ViewStart.cshtml" />
     <Content Include="Views\User\EditAccount.cshtml" />
     <Content Include="Views\User\Notifications.cshtml" />
     <Content Include="Views\Shared\DeleteConfirmation.cshtml" />
