--- a/src/Mzayad.Services/Mzayad.Services.csproj
+++ b/src/Mzayad.Services/Mzayad.Services.csproj
@@ -129,6 +129,7 @@
     <Compile Include="SubscriptionService.cs" />
     <Compile Include="TokenService.cs" />
     <Compile Include="Identity\UserManager.cs" />
+    <Compile Include="Trophies\ITrophyEngine.cs" />
     <Compile Include="Trophies\SubmitBidTrophyEngine.cs" />
     <Compile Include="Trophies\TrophyEngineFactory.cs" />
     <Compile Include="TrophyService.cs" />
