--- a/src/Mzayad.Models/Mzayad.Models.csproj
+++ b/src/Mzayad.Models/Mzayad.Models.csproj
@@ -103,6 +103,7 @@
     <Compile Include="ProductImage.cs" />
     <Compile Include="ProductSpecification.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SessionLog.cs" />
     <Compile Include="ShippingAddress.cs" />
     <Compile Include="Specification.cs" />
     <Compile Include="SplashAd.cs" />
