--- a/src/Mzayad.Services.Tests/Mzayad.Services.Tests.csproj
+++ b/src/Mzayad.Services.Tests/Mzayad.Services.Tests.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Fakes\TestDbAsyncQueryProvider.cs" />
     <Compile Include="Fakes\TestDbSet.cs" />
     <Compile Include="SubscriptionServiceTests.cs" />
+    <Compile Include="VisitSiteTrophyTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
