--- a/src/Mzayad.Services/Mzayad.Services.csproj
+++ b/src/Mzayad.Services/Mzayad.Services.csproj
@@ -130,9 +130,10 @@
     <Compile Include="SubscriptionService.cs" />
     <Compile Include="TokenService.cs" />
     <Compile Include="Identity\UserManager.cs" />
-    <Compile Include="Trophies\ITrophyEngine.cs" />
+    <Compile Include="Trophies\TrophyEngine.cs" />
     <Compile Include="Trophies\SubmitBidTrophyEngine.cs" />
     <Compile Include="Trophies\TrophyEngineFactory.cs" />
+    <Compile Include="Trophies\VisitSiteTrophyEngine.cs" />
     <Compile Include="TrophyService.cs" />
     <Compile Include="WishListService.cs" />
   </ItemGroup>
